Add Radzen Blazor in Scheduling.BlazorClient.Client #5

--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/_Imports.razor
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client
 @using Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client.Shared
+@using Radzen
+@using Radzen.Blazor
