Add css properties for handling datagrid filter menues in Scheduling.BlazorClient.Client #5

--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/wwwroot/assets/css/styles.css
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/wwwroot/assets/css/styles.css
@@ -76,3 +76,13 @@
   top: 0;
   z-index: 0;
 }
+
+/* DataGrid's filter menu */
+.datagrid-filter-menu {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.datagrid-filter-menu button {
+  margin-left: .5rem;
+}
