--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Pages/Clients/Clients.razor
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Pages/Clients/Clients.razor
@@ -2,11 +2,102 @@
 @layout Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client.Shared.MainLayout
 @inherits Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client.Pages.Clients.ClientsComponent
 
+@using Application.SharedModel.Client
+@using Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client.Shared.Components.RadzenTextBoxSearchComponent
 @using Radzen
 @using Radzen.Blazor
 
-<RadzenContent Container="main">
-    <ChildContent>
-        <RadzenHeading Size="H1" style="display: inline-block" Text="Clients"></RadzenHeading>
-    </ChildContent>
-</RadzenContent>
+<RadzenHeading
+    Size="H1"
+    Text="Clients">
+</RadzenHeading>
+
+<RadzenCard>
+    <div class="row mb-3">
+        <div class="col-12 col-sm-4 col-md-6 col-lg-7 col-xl-8"></div>
+
+        <div class="col-12 col-sm-8 col-md-6 col-lg-5 col-xl-4">
+            <div class="datagrid-filter-menu">
+                <RadzenTextBoxSearch
+                    @bind-Value=@SearchFilterValue
+                    @onkeyup=@OnKeyUpFilterSearch
+                    AutoComplete="false"
+                    Click=@OnClickFilterSearch
+                    Placeholder="Search...">
+                </RadzenTextBoxSearch>
+
+                <RadzenButton
+                    ButtonStyle="ButtonStyle.Secondary"
+                    Click=@OpenFilterMenu
+                    Icon="filter_list">
+                </RadzenButton>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <RadzenDataGrid @ref=@ClientsGrid
+                AllowPaging="true"
+                AllowSorting="true"
+                Count=@Count
+                Data=@Clients
+                IsLoading=@IsLoading
+                LoadData=@LoadData
+                PagerHorizontalAlign="HorizontalAlign.Center"
+                PageSize="10"
+                PageSizeOptions="@PageSizeOptions"
+                PagingSummaryFormat=@PagingSummaryFormat
+                ShowPagingSummary="true"
+                TItem="ClientDto">
+                <Columns>
+                    <RadzenDataGridColumn
+                        Filterable="true"
+                        Property="ClientId"
+                        Sortable="true"
+                        SortOrder="SortOrder.Ascending"
+                        TextAlign="TextAlign.Left"
+                        TItem="ClientDto"
+                        Title="Id">
+                    </RadzenDataGridColumn>
+
+                    <RadzenDataGridColumn
+                        Filterable="true"
+                        Property="FullName"
+                        Sortable="true"
+                        TextAlign="TextAlign.Justify"
+                        TItem="ClientDto"
+                        Title="Full Name">
+                    </RadzenDataGridColumn>
+
+                    <RadzenDataGridColumn
+                        Filterable="true"
+                        Property="PreferredName"
+                        Sortable="true"
+                        TextAlign="TextAlign.Justify"
+                        TItem="ClientDto"
+                        Title="Preferred Name">
+                    </RadzenDataGridColumn>
+
+                    <RadzenDataGridColumn
+                        Filterable="true"
+                        Property="Salutation"
+                        Sortable="true"
+                        TextAlign="TextAlign.Justify"
+                        TItem="ClientDto"
+                        Title="Salutation">
+                    </RadzenDataGridColumn>
+
+                    <RadzenDataGridColumn
+                        Filterable="true"
+                        Property="EmailAddress"
+                        Sortable="true"
+                        TextAlign="TextAlign.Justify"
+                        TItem="ClientDto"
+                        Title="Email Address">
+                    </RadzenDataGridColumn>
+                </Columns>
+            </RadzenDataGrid>
+        </div>
+    </div>
+</RadzenCard>
