Add Clinics menu item into MainLayout in Scheduling.BlazorClient.Client #5

--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Shared/MainLayout.razor
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Shared/MainLayout.razor
@@ -33,6 +33,7 @@
                     <RadzenPanelMenuItem Icon="event" Path="appointments" Text="Appointments"></RadzenPanelMenuItem>
                     <RadzenPanelMenuItem Icon="widgets" Path="appointmenttypes" Text="Appointment Types"></RadzenPanelMenuItem>
                     <RadzenPanelMenuItem Icon="people_alt" Path="clients" Text="Clients"></RadzenPanelMenuItem>
+                    <RadzenPanelMenuItem Icon="store" Path="clinics" Text="Clinics"></RadzenPanelMenuItem>
                     <RadzenPanelMenuItem Icon="face" Path="doctors" Text="Doctors"></RadzenPanelMenuItem>
                     <RadzenPanelMenuItem Icon="pets" Path="patients" Text="Patients"></RadzenPanelMenuItem>
                     <RadzenPanelMenuItem Icon="meeting_room" Path="rooms" Text="Rooms"></RadzenPanelMenuItem>
