Add LayoutSpinner component into MainLayout razor view in Scheduling.BlazorClient.Client #5

--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Shared/MainLayout.razor
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Shared/MainLayout.razor
@@ -1,5 +1,7 @@
 @inherits Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client.Shared.MainLayoutComponent
 
+@using Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client.Shared.Components
+
 <RadzenDialog></RadzenDialog>
 <RadzenNotification></RadzenNotification>
 
@@ -49,3 +51,5 @@
         </ChildContent>
     </RadzenFooter>
 </RadzenLayout>
+
+<LayoutSpinnerComponent></LayoutSpinnerComponent>
