--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/wwwroot/assets/css/styles.css
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/wwwroot/assets/css/styles.css
@@ -7,6 +7,7 @@
 @import './styles-generated.css';
 @import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 @import url('components/search-input-text.css');
+@import url('components/spinner.css');
 
 #blazor-error-ui {
   background: lightyellow;
