Add css rules for styling images on AddAppointment page in Scheduling.BlazorClient.Client #5

--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/wwwroot/assets/css/styles.css
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/wwwroot/assets/css/styles.css
@@ -85,5 +85,18 @@
 }
 
 .datagrid-filter-menu button {
-  margin-left: .5rem;
+  margin-left: 1rem;
+}
+
+/* Input Dialog */
+.input-dialog-imgage-container {
+  text-align: center;
+  width: 100%;
+}
+
+.input-dialog-imgage-container img {
+  border-style: none;
+  max-height: 5rem;
+  max-width: 5rem;
+  vertical-align: middle;
 }
