Add label into AddEditAppointment view to let User know about the current time zone before or after create and appointment #5

--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Pages/Appointments/AddEditAppointment.razor
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Pages/Appointments/AddEditAppointment.razor
@@ -8,6 +8,14 @@
     Data="@Appointment"
     Submit=@OnSubmit
     TItem="AppointmentItemVm">
+    <div class="row">
+        <div class="col-12 text-center">
+            <RadzenLabel Text="Time Zone:"></RadzenLabel>
+
+            <RadzenLabel Text="@SelectedTimezoneName"></RadzenLabel>
+        </div>
+    </div>
+
     <div class="row mb-3">
         <div class="col-sm-4">
             <div class="row mb-3">
