Styling Labels for input fields into AddEditAppointment view in Scheduling.BlazorClient.Client #5

--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Pages/Appointments/AddEditAppointment.razor
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Pages/Appointments/AddEditAppointment.razor
@@ -20,7 +20,11 @@
         <div class="col-sm-4">
             <div class="row mb-3">
                 <div class="col-12 mb-3">
-                    <RadzenLabel Text="Clinic"></RadzenLabel>
+                    <RadzenText
+                        TagName="TagName.H3"
+                        Text="Clinic"
+                        TextStyle="TextStyle.Subtitle2">
+                    </RadzenText>
 
                     <RadzenTextBox
                         Class="w-100 d-block"
@@ -30,7 +34,11 @@
                 </div>
 
                 <div class="col-12 mb-3">
-                    <RadzenLabel Text="Patient"></RadzenLabel>
+                    <RadzenText
+                        TagName="TagName.H3"
+                        Text="Patient"
+                        TextStyle="TextStyle.Subtitle2">
+                    </RadzenText>
 
                     <RadzenTextBox
                         Class="w-100 d-block"
@@ -45,7 +53,11 @@
                 </div>
 
                 <div class="col-12 mb-3">
-                    <RadzenLabel Text="Doctor"></RadzenLabel>
+                    <RadzenText
+                        TagName="TagName.H3"
+                        Text="Doctor"
+                        TextStyle="TextStyle.Subtitle2">
+                    </RadzenText>
 
                     <RadzenDropDownDataGrid
                         @ref=@DoctorDropDownDataGrid
@@ -94,7 +106,11 @@
         <div class="col-sm-8">
             <div class="row mb-3">
                 <div class="col-6 mb-3">
-                    <RadzenLabel Text="Start"></RadzenLabel>
+                    <RadzenText
+                        TagName="TagName.H3"
+                        Text="Start"
+                        TextStyle="TextStyle.Subtitle2">
+                    </RadzenText>
 
                     <RadzenDatePicker
                         @bind-Value="@Appointment.StartOn"
@@ -120,7 +136,11 @@
                 </div>
 
                 <div class="col-6 mb-3">
-                    <RadzenLabel Text="End"></RadzenLabel>
+                    <RadzenText
+                        TagName="TagName.H3"
+                        Text="End"
+                        TextStyle="TextStyle.Subtitle2">
+                    </RadzenText>
 
                     <RadzenDatePicker
                         @bind-Value="@Appointment.EndOn"
@@ -146,7 +166,11 @@
                 </div>
 
                 <div class="col-6 mb-3">
-                    <RadzenLabel Text="Appointment Type"></RadzenLabel>
+                    <RadzenText
+                        TagName="TagName.H3"
+                        Text="Appointment Type"
+                        TextStyle="TextStyle.Subtitle2">
+                    </RadzenText>
 
                     <RadzenDropDownDataGrid
                         @ref=@AppointmentTypeDropDownDataGrid
@@ -187,7 +211,11 @@
                 </div>
 
                 <div class="col-6 mb-3">
-                    <RadzenLabel Text="Room"></RadzenLabel>
+                    <RadzenText
+                        TagName="TagName.H3"
+                        Text="Room"
+                        TextStyle="TextStyle.Subtitle2">
+                    </RadzenText>
 
                     <RadzenDropDownDataGrid
                         @ref=@RoomDropDownDataGrid
@@ -228,7 +256,11 @@
                 </div>
 
                 <div class="col-12 mb-3">
-                    <RadzenLabel Text="Title"></RadzenLabel>
+                    <RadzenText
+                        TagName="TagName.H3"
+                        Text="Title"
+                        TextStyle="TextStyle.Subtitle2">
+                    </RadzenText>
 
                     <RadzenTextBox
                         @bind-Value="@Appointment.Title"
@@ -245,7 +277,11 @@
                 </div>
 
                 <div class="col-12">
-                    <RadzenLabel Text="Description"></RadzenLabel>
+                    <RadzenText
+                        TagName="TagName.H3"
+                        Text="Description"
+                        TextStyle="TextStyle.Subtitle2">
+                    </RadzenText>
 
                     <RadzenTextArea
                         @bind-Value="@Appointment.Description"
