Replace  LayoutSpinnerComponent tag by SpinnerComponent in Scheduling.BlazorClient.Client #5

--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Shared/MainLayout.razor
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 @inherits Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client.Shared.MainLayoutComponent
 
-@using Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client.Shared.Components
+@using Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client.Shared.Components.Spinner
 @using Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client.Shared.Components.UserSettings
 
 <RadzenDialog></RadzenDialog>
@@ -54,4 +54,4 @@
     </RadzenFooter>
 </RadzenLayout>
 
-<LayoutSpinnerComponent></LayoutSpinnerComponent>
+<SpinnerComponent></SpinnerComponent>
